160104: Smoothing out multi-user functions and error handling

--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -111,3 +111,9 @@ h2{
     text-decoration:none;
     position:relative;
 }
+
+.error {
+    color: red;
+    font-size: .8em;
+    background-color: #FFF;
+}
